--- a/src/app/personnels/info-person/language-teachnoly-politic/language-teachnoly-politic.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/language-teachnoly-politic.component.html
@@ -1,11 +1,11 @@
 <div class="mgb-20" style="margin-bottom: 20px;">
-  <app-foreign-language></app-foreign-language>
+  <app-foreign-language [user]="user"></app-foreign-language>
 </div>
 <!---->
 <div class="mgb-20" style="margin-bottom: 20px;">
-  <app-info-technology></app-info-technology>
+  <app-info-technology [user]="user"></app-info-technology>
 </div>
 <!---->
 <div class="mgb-20" style="margin-bottom: 20px;">
-  <app-politic></app-politic>
+  <app-politic [user]="user"></app-politic>
 </div>
