--- a/src/app/personnels/info-person/info.component.html
+++ b/src/app/personnels/info-person/info.component.html
@@ -1,169 +1,141 @@
 <div id="info-container">
-  <div class="action-form mgb-40 text-right" >
-    <button (click)="print()"> <i class="fa fa-print" aria-hidden="true"></i> Print </button>
+  <div class="row">
+    <div class="col-xs-12  text-right">
+      <div class="action-form mgb-40 ">
+        <button (click)="onAccept()" *ngIf="showAcitve">Duyệt</button>
+        <button (click)="print()"><i class="fa fa-print" aria-hidden="true"></i> Print</button>
+      </div>
+      <div class="text-center" *ngIf="message.condition && showAcitve  " [ngClass]="'alert alert-'+ message.type">
+        {{message.content}}
+      </div>
+    </div>
+
   </div>
   <!--Sơ yếu lí lịch -->
   <div id="app-curriculum-vitae">
-    <app-curriculum-vitae></app-curriculum-vitae>
+    <app-curriculum-vitae [user]="user"></app-curriculum-vitae>
   </div>
 
   <div class="placholder"></div>
 
   <!--Đảng đoàn công đoàn -->
   <div id="app-party-union">
-    <app-party-union></app-party-union>
+    <app-party-union [user]="user"></app-party-union>
   </div>
 
   <div class="placholder"></div>
 
   <!--Quan hệ gia đình -->
   <div id="app-family-relationship">
-    <app-family-relationship></app-family-relationship>
+    <app-family-relationship [user]="user"></app-family-relationship>
   </div>
   <div class="placholder"></div>
 
   <!--thong tin hop dong-->
   <div id="app-contract">
-    <app-contract></app-contract>
+    <app-contract [user]="user"></app-contract>
   </div>
 
   <div class="placholder"></div>
 
   <!--Qúa trình làm việc -->
   <div id="app-process-work">
-    <app-process-work></app-process-work>
+    <app-process-work [user]="user"></app-process-work>
   </div>
   <div class="placholder"></div>
 
 
   <div id="app-politic-language-technology">
     <!--Trinh độ ngoại ngữ -->
-    <app-foreign-language></app-foreign-language>
+    <app-foreign-language [user]="user"></app-foreign-language>
     <!--Trinh do chinh tri-->
-    <app-politic></app-politic>
+    <app-politic [user]="user"></app-politic>
     <!--Trinh do tin hoc -->
-    <app-info-technology></app-info-technology>
+    <app-info-technology [user]="user"></app-info-technology>
   </div>
 
   <div class="placholder"></div>
 
   <!--kỷ luật khen thưởng -->
   <div id="app-bonus-discipline">
-    <app-bonus-discipline></app-bonus-discipline>
+    <app-bonus-discipline [user]="user"></app-bonus-discipline>
   </div>
 
   <div class="placholder"></div>
 
   <!--Học hàm , danh hiệu nhà giáo -->
   <div id="app-academic-rank">
-    <app-academic-rank></app-academic-rank>
+    <app-academic-rank [user]="user"></app-academic-rank>
   </div>
 
   <div class="placholder"></div>
   <!--QUas tring giang day-->
   <div id="app-process-teaching">
-    <app-process-teaching></app-process-teaching>
+    <app-process-teaching [user]="user"></app-process-teaching>
   </div>
   <div class="placholder"></div>
 
   <!--danh hieu thi dua -->
   <div id="app-emulation-title">
-    <app-emulation-title></app-emulation-title>
+    <app-emulation-title [user]="user"></app-emulation-title>
   </div>
 
   <div class="placholder"></div>
   <!--nhap thong tin nghach l-uong-->
   <div id="app-salary-brief">
-    <app-salary-brief></app-salary-brief>
+    <app-salary-brief [user]="user"></app-salary-brief>
   </div>
 
   <div class="placholder"></div>
 
   <!--QUa trinh di nuoc ngoai-->
   <div id="app-foreign">
-    <app-foreign></app-foreign>
+    <app-foreign [user]="user"></app-foreign>
   </div>
 
   <div class="placholder"></div>
 
   <!--Huong dan luan van-->
   <div id="app-thesis-guide">
-    <app-thesis-guide></app-thesis-guide>
+    <app-thesis-guide [user]="user"></app-thesis-guide>
   </div>
   <div class="placholder"></div>
 
   <!-- De tai khoa hoc -->
   <div id="app-science-topic">
-    <app-science-topic></app-science-topic>
+    <app-science-topic [user]="user"></app-science-topic>
   </div>
   <div class="placholder"></div>
 
   <!--Bao cao, bai bao khoa hoc -->
   <div id="app-senimar-newpaper">
-    <app-senimar-newpaper></app-senimar-newpaper>
+    <app-senimar-newpaper [user]="user"></app-senimar-newpaper>
   </div>
   <div class="placholder"></div>
 
   <!--Qua trinh phat minh sang che -->
   <div id="app-process-evention">
-    <app-process-evention></app-process-evention>
+    <app-process-evention [user]="user"></app-process-evention>
   </div>
   <div class="placholder"></div>
   <!--Hoat dong xuat ban -->
   <div id="app-publish-info">
-    <app-publish-info></app-publish-info>
+    <app-publish-info [user]="user"></app-publish-info>
   </div>
   <div class="placholder"></div>
 
   <!--Qua trinh dao tao-->
   <div id="app-train">
-    <app-train></app-train>
+    <app-train [user]="user"></app-train>
   </div>
 
   <div class="placholder"></div>
 </div>
 
 
-<!--&lt;!&ndash;lưu ý form&ndash;&gt;-->
-<!--<div id="app-note-form">-->
-<!--<app-note-form></app-note-form>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;quan ly nhan su&ndash;&gt;-->
-<!--&lt;!&ndash;Thuc tuc chuyen phong ban&ndash;&gt;-->
-<!--<div id="app-procedure-transfer-department">-->
-<!--<app-procedure-transfer-department></app-procedure-transfer-department>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;Chuyen don vi cong tac &ndash;&gt;-->
-<!--<div id="app-procedure-transfer-unit-work">-->
-<!--<app-procedure-transfer-unit-work></app-procedure-transfer-unit-work>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;Thu tuc buoc thoi viec&ndash;&gt;-->
-<!--<div id="app-procedure-bind-job">-->
-<!--<app-procedure-bind-job></app-procedure-bind-job>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;Thu tuc ve huu&ndash;&gt;-->
-<!--<div id="app-procedure-retire">-->
-<!--<app-procedure-retire></app-procedure-retire>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;thủ tục nghỉ việc &ndash;&gt;-->
-<!--<div id="app-procedure-leave-job">-->
-<!--<app-procedure-leave-job></app-procedure-leave-job>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;Sửa thông tin cán bộ &ndash;&gt;-->
-<!--<div id="app-edit-personnel">-->
-<!--<app-edit-personnel></app-edit-personnel>-->
-<!--</div>-->
-
-<!--&lt;!&ndash;Thêm mơi cán bộ &ndash;&gt;-->
-<!--<div id="app-add-personnel">-->
-<!--<app-add-personnel></app-add-personnel>-->
-<!--</div>-->
-
-<!--End quan ly nhan su-->
+<div id="app-menu-right-info">
+  <ul class="menu-app">
+    <app-menu-app [native]="true" [menus]="menu" id="menu-info"></app-menu-app>
+  </ul>
+</div>
 
