--- a/src/app/personnels/manager-system/role-manager/role-manager.component.html
+++ b/src/app/personnels/manager-system/role-manager/role-manager.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-center mgb-15" style="font-size: 20px"> Danh sách quyền </h4>
+<h4 class="text-center mgb-15" style="font-size: 20px"> Danh sách chức vụ </h4>
 <div *ngIf="message.condition"
      [ngClass]="'alert alert-'+ message.type">
   {{message.content}}
@@ -8,7 +8,7 @@
     <thead>
     <tr>
       <th style="width:5%">STT</th>
-      <th>Tên quyền</th>
+      <th>Tên chức vụ</th>
       <th>Mô tả</th>
       <th>Activated</th>
       <th>Thời gian tạo</th>
@@ -42,7 +42,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modalDetail)">Thoát</button>
     </div>
-    <h3 class="text-center">Chi tiết quyền {{roleDetail?roleDetail.title:''}}</h3>
+    <h3 class="text-center">Chi tiết chức vụ {{roleDetail?roleDetail.title:''}}</h3>
   </modal-header>
 
   <modal-body>
@@ -93,7 +93,7 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modalCreate)">Thoát</button>
     </div>
-    <h3 class="text-center">{{update?'Cập nhật quyền':'Tạo mới quyền'}}</h3>
+    <h3 class="text-center">{{update?'Cập nhật chức vụ':'Tạo mới chức vụ'}}</h3>
     <div *ngIf="message.condition"
          [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
@@ -108,7 +108,7 @@
         <input type="text" name="title"
                class="form-control"
                [(ngModel)]="title" placeholder="Tên quyền ">
-        <div class="error fs-i-14" *ngIf="formTouch && title.toString().trim() == ''">Chưa nhập tên quyền</div>
+        <div class="error fs-i-14" *ngIf="formTouch && title.toString().trim() == ''">Chưa nhập tên chức vụ</div>
       </div>
       <div class="col-xs-12 mgb-20">
         <h5 class="mgb-10">Mô tả </h5>
