--- a/src/app/components/tabs/tab-left/tab-left.component.html
+++ b/src/app/components/tabs/tab-left/tab-left.component.html
@@ -1,4 +1,4 @@
-<div id="tab-left" class="hidden-xs" (click)="hideTabLeft()">
+<div id="tab-left" class="hidden-xs">
   <div>
     <div class="tab-left">
       <ul class="nav nav-tabs">
@@ -76,7 +76,7 @@
 
   <modal-footer>
     <div class="text-left">
-      <a (click)="openModalForgetPass(forgetPass,loginModal)">Quên mật khẩu ? </a>
+      <a style="cursor: pointer" (click)="openModalForgetPass(forgetPass,loginModal)">Quên mật khẩu ? </a>
     </div>
     <div class=" text-right">
       <button class="btn btn-success" (click)="onLogin(loginModal)">Đăng nhập</button>
@@ -97,16 +97,31 @@
   </modal-header>
 
   <modal-body>
-    <form class="pdb-20">
+    <form class="pdb-20" #formForget="ngForm">
 
       <div class="mgb-10">
         <label class="fs-13">Mã cán bộ : </label>
-        <input type="text" required class="form-control">
+        <input type="text" required class="form-control" name="username"
+               #username="ngModel" ngModel>
+        <div class="error fs-13" *ngIf="username.touched && username.value.trim() ==''">
+          Chưa nhập mã cán bộ
+        </div>
+
+
       </div>
       <div>
         <label class="fs-13">Email : </label>
-        <input type="password" class="form-control">
+        <input type="email" required pattern="^\w+([\.-_]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" class="form-control"
+               name="email"
+               #email="ngModel" ngModel>
       </div>
+
+      <div class="item-control">
+        <div class="error fs-13" *ngIf="email.touched && !validEmail(email.value)">Email phải đúng định abc@xx...
+        </div>
+      </div>
+
+
       <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
       </div>
@@ -115,7 +130,7 @@
 
   <modal-footer>
     <div class=" text-right">
-      <button class="btn btn-success" (click)="onForgetPass(forgetPass)">Gửi</button>
+      <button class="btn btn-success" (click)="onForgetPass(formForget)">Gửi</button>
     </div>
   </modal-footer>
 
