--- a/src/app/personnels/search-statistic/statistic/statistic-person-by-faculty/statistic-person-by-faculty.component.html
+++ b/src/app/personnels/search-statistic/statistic/statistic-person-by-faculty/statistic-person-by-faculty.component.html
@@ -1,12 +1,35 @@
 <div class="row">
+
+  <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+    <form style="padding-top: 25px" action="">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-item">
+            <div class="form-item-title">
+              {{title}}
+            </div>
+            <div class="form-group">
+              <label for="sel1" class="mgb-15  fs-13">Đơn vị cấp 1</label>
+              <select class="form-control"  id="sel1"  #fac (change)="level1Change(fac.value)">
+                <option value="-1">--------Chọn--------</option>
+                <option *ngFor="let item of listFaculty1" [value]="item._id">{{item.name}}</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="sel2" class="mgb-15 fs-13">Đơn vị cấp 2</label>
+              <select class="form-control"  id="sel2" name="level2" #fac2 (change)="level2Change(fac.value,fac2.value)">
+                <option value="-1">--------Chọn--------</option>
+                <option *ngFor="let item of listFaculty2" [value]="item._id">{{item.name}}</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <!---->
+      </div>
+    </form>
+  </div>
   <div class="col-xs-12">
-    <div class="form-group">
-      <label for="sel1" class="mgb-15">Chọn khoa, phòng ban:</label>
-      <select class="form-control" #fac id="sel1" (change)="onStatistic(fac.value)">
-        <option value="-1">--------Chọn--------</option>
-        <option *ngFor="let item of listFaculty" [value]="item._id">{{item.name}}</option>
-      </select>
-    </div>
+
     <p>Tổng số : {{dataUser.length}}</p>
     <app-statistic-table [data]="dataUser" [title]="title"
                          [fields]="fields"
