--- a/src/styles.css
+++ b/src/styles.css
@@ -74,3 +74,10 @@ tbody tr td {
     width: auto;
   }
 }
+
+input[type='checkbox'] {
+  transform: scale(1.3);
+}
+.alert{
+  text-align: center;
+}
