chinh sua lai module va lay lai danh muc dia gioi hanh ching

--- a/src/app/components/headers/header-2/header-2.component.html
+++ b/src/app/components/headers/header-2/header-2.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="right">
           <div class="dropdown">
-            <img [src]="avatar?avatar:'http://via.placeholder.com/150x150'" class="avatar" alt=""
+            <img [src]="avatar?avatar:'/assets/images/avatar/avatar.jpg'" class="avatar" alt=""
                  style="width: 30px;height: 30px">
             <a id="dropdownMenu1" data-toggle="dropdown" style="cursor: pointer; color: #fff"
                aria-haspopup="true" aria-expanded="true">
