--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,9 +22,9 @@
 
 <div  app-footer></div>
 
-<div >
-  <div app-tab-left></div>
-</div>
+<!--<div>-->
+  <!--<div app-tab-left></div>-->
+<!--</div>-->
 
-<div app-top></div>
-<!--<div app-persons></div>-->
+<!--<div app-top></div>-->
+
