--- a/src/app/personnels/search-statistic/statistic/statistic-person-by-faculty/statistic-person-by-faculty.component.html
+++ b/src/app/personnels/search-statistic/statistic/statistic-person-by-faculty/statistic-person-by-faculty.component.html
@@ -6,7 +6,7 @@
         <div class="col-xs-12">
           <div class="form-item">
             <div class="form-item-title">
-              {{title}}
+              Chọn đơn vị
             </div>
             <div class="form-group">
               <label for="sel1" class="mgb-15  fs-13">Đơn vị cấp 1</label>
