--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -1,89 +1,7 @@
-<router-outlet></router-outlet>
-<!--<app-login></app-login>-->
-<!--<app-manager-personnel></app-manager-personnel>-->
-
-<!--<div class="mgb-20">-->
-  <!--<app-header-2></app-header-2>-->
-<!--</div>-->
-
-<!--<div class="container">-->
-  <!--<div id="app-menu">-->
-     <!--<div class="app-menu-content">-->
-       <!--<app-menu-app></app-menu-app>-->
-     <!--</div>-->
-  <!--</div>-->
-  <!--&lt;!&ndash;Thuc tuc chuyen phong ban&ndash;&gt;-->
-  <!--<app-procedure-transfer-department></app-procedure-transfer-department>-->
-
-  <!--&lt;!&ndash;Chuyen don vi cong tac &ndash;&gt;-->
-  <!--<app-procedure-transfer-unit-work></app-procedure-transfer-unit-work>-->
-  <!--&lt;!&ndash;Thu tuc buoc thoi viec&ndash;&gt;-->
-  <!--<app-procedure-bind-job></app-procedure-bind-job>-->
-  <!--&lt;!&ndash;Thu tuc ve huu&ndash;&gt;-->
-  <!--<app-procedure-retire></app-procedure-retire>-->
-  <!--&lt;!&ndash;thủ tục nghỉ việc &ndash;&gt;-->
-  <!--<app-procedure-leave-job></app-procedure-leave-job>-->
-  <!--&lt;!&ndash;Sửa thông tin cán bộ &ndash;&gt;-->
-  <!--<app-edit-personnel></app-edit-personnel>-->
-  <!--&lt;!&ndash;Thêm mơi cán bộ &ndash;&gt;-->
-  <!--<app-add-personnel></app-add-personnel>-->
-  <!--&lt;!&ndash;Qua trinh phat minh sang che &ndash;&gt;-->
-  <!--<app-process-evention></app-process-evention>-->
-  <!--&lt;!&ndash;QUas tring giang day&ndash;&gt;-->
-  <!--<app-process-teaching></app-process-teaching>-->
-  <!--&lt;!&ndash;Hoat dong xuat ban &ndash;&gt;-->
-  <!--<app-publish-info></app-publish-info>-->
-  <!--&lt;!&ndash;Bao cao, bai bao khoa hoc &ndash;&gt;-->
-  <!--<app-senimar-newpaper></app-senimar-newpaper>-->
-  <!--&lt;!&ndash; De tai khoa hoc &ndash;&gt;-->
-  <!--<app-science-topic></app-science-topic>-->
-  <!--&lt;!&ndash;Huong dan luan van&ndash;&gt;-->
-  <!--<app-thesis-guide></app-thesis-guide>-->
-
-  <!--&lt;!&ndash;QUa trinh di nuoc ngoai&ndash;&gt;-->
-  <!--<app-foreign></app-foreign>-->
-
-  <!--&lt;!&ndash;nhap thong tin nghach l-uong&ndash;&gt;-->
-  <!--<app-salary-brief></app-salary-brief>-->
-
-  <!--&lt;!&ndash;danh hieu thi dua &ndash;&gt;-->
-  <!--<app-emulation-title></app-emulation-title>-->
-
-  <!--&lt;!&ndash;Học hàm , danh hiệu nhà giáo &ndash;&gt;-->
-  <!--<app-academic-rank></app-academic-rank>-->
-
-  <!--&lt;!&ndash;kỷ luật khen thưởng &ndash;&gt;-->
-  <!--<app-bonus-discipline></app-bonus-discipline>-->
-
-  <!--&lt;!&ndash;Trinh độ ngoại ngữ &ndash;&gt;-->
-  <!--<app-foreign-language></app-foreign-language>-->
-
-  <!--&lt;!&ndash;Trinh do chinh tri&ndash;&gt;-->
-  <!--<app-politic></app-politic>-->
-
-  <!--&lt;!&ndash;Trinh do tin hoc &ndash;&gt;-->
-  <!--<app-info-technology></app-info-technology>-->
-
-  <!--&lt;!&ndash;Qua trinh dao tao&ndash;&gt;-->
-  <!--<app-train></app-train>-->
-
-  <!--&lt;!&ndash;thong tin hop dong&ndash;&gt;-->
-  <!--<app-contract></app-contract>-->
+<app-tab-left></app-tab-left>
+<div>
+  <router-outlet></router-outlet>
+</div>
 
 
-  <!--&lt;!&ndash;Qúa trình làm việc &ndash;&gt;-->
-  <!--<app-process-work></app-process-work>-->
-
-  <!--&lt;!&ndash;Quan hệ gia đình &ndash;&gt;-->
-  <!--<app-family-relationship></app-family-relationship>-->
-
-  <!--&lt;!&ndash;lưu ý form&ndash;&gt;-->
-  <!--<app-note-form></app-note-form>-->
-
-  <!--&lt;!&ndash;Đảng đoàn công đoàn &ndash;&gt;-->
-  <!--<app-party-union></app-party-union>-->
-
-  <!--&lt;!&ndash;Sơ yếu lí lịch &ndash;&gt;-->
-  <!--<app-curriculum-vitae></app-curriculum-vitae>-->
-<!--</div>-->
 <div app-top></div>
