--- a/src/app/personnels/manager.component.html
+++ b/src/app/personnels/manager.component.html
@@ -1,16 +1,14 @@
+<!--<div>-->
+  <!--<div app-tab-left></div>-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--<app-tab-left></app-tab-left>-->
 <div class="mgb-50">
   <app-header-2></app-header-2>
 </div>
 
+
 <div class="container">
 
-  <!--<div id="app-menu-left">-->
-    <!--<div class="app-menu-content">-->
-
-      <!--<h4 class="app-menu-title-catalog">{{titleFeature}} </h4>-->
-      <!--<app-menu-app [native]="native" [menus]="menu" id="menu-info1"></app-menu-app>-->
-    <!--</div>-->
-  <!--</div>-->
 
   <div id="app-menu-right">
     <ul class="menu-app">
@@ -21,8 +19,6 @@
   <router-outlet></router-outlet>
 </div>
 
-<div app-top></div>
+<!--<div app-top></div>-->
 
-<div>
-  <div app-tab-left></div>
-</div>
+
